src/components/Collapse/Collapse.scss
@import "../../assets/sass/main.scss";

.collapse-container {
  padding: 15px;
  border-radius: 5px;
  background-color: $red-orange;
  cursor: pointer;
  box-sizing: border-box;
  user-select: none;

  @media (max-width: 630px) {
    padding: 10px;
  }

  .collapse-header {
    @include flex-row;
    @include font-24px-w700;
    justify-content: space-between;
    align-items: center;
    color: white;
    height: 22px;

    @media (max-width: 630px) {
      height: 10px;
      font-size: 13px;
    }

    .collapse-icon {
      transition: transform 0.5s ease;

      &.open {
        transform: rotate(180deg);
      }
    }
  }
}

.collapse-content {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0 20px;
  box-sizing: border-box;
  text-align: justify;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  transition: max-height 0.5s ease-out, opacity 0.3s ease-in-out,
    padding 0.7s ease-out;
  position: relative;
  top: 0;
  z-index: 1;

  &.open {
    @include font-18px-w400;
    max-height: 1000px;
    opacity: 1;
    background-color: #f6f6f673;
    padding: 20px;

    @media (max-width: 630px) {
      font-size: 12px;
    }
  }

  &.closed {
    max-height: 0;
    opacity: 0;
    padding: 0 20px;
  }
}

